[package]
name = "timeproof"
version = "0.1.0"
description = "Trusted-clock + offline license verification via TLS NTP"
edition = "2021"

[dependencies]
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
rustls = { version = "0.23.41", default-features = false, features = ["std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["parsing", "std"] }
webpki-root-certs = "1.0.8"
