[package]
name = "timeproof"
version = "0.1.0"
description = "Trusted-clock + offline license verification via TLS NTP"
edition = "2021"

[dependencies]
base64 = "0.22"
ed25519-dalek = "3.0"
hex = "0.4"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["parsing", "std"] }
webpki-root-certs = "1.0"
